[project]
name = "langchain-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.0.10",
    "langsmith>=0.3.0",
    "ollama>=0.4.0",
    "pypdf>=6.8.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.4",
    "weaviate-client>=4.0.0",
]

[tool.pyright]
venvPath="."
venv = ".venv"

[tool.basedpyright]
venvPath="."
venv = ".venv"
